2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (process_module): Use COB_MODULE_EXT.
	Don't use -soname.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c: Use `cob_alnum_desc' where appropriate.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_field_definition): Output NULL for
	cob_field.desc when it is a group.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c, inline.c: Updated for the change in libcob that
	moved the `size' field from cob_field_desc to cob_field.

2002-06-09  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cobc_field): New member `in_redefines'.
	* parser.y (validate_field): Set `in_redefines' and validate REDEFINES.
	Display error if a field under REDEFINES has VALUE clause.
	(init_field): Inherit the `in_redefines' flag.

2002-06-09  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c (make_tree, make_picture, make_word): Use memset to
	initialize the memory allocated.
	(make_literal, make_field, make_file_name, make_label_name_nodef) 
	(make_perform): Let make_tree initialize the memory by zero.

2002-06-08  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (long_options): Accept '-main' option.
	* cobc.c, cobc.h (cobc_main_flag): New variable.
	(cobc_module_flag): Removed.
	* codegen.c (OUTPUT_HANDLER): Removed.
	(codegen): Updated.
	* parser.y (procedure_using): Don't show -m warning.

2002-06-06  Keisuke Nishida  <knishida@netlab.jp>

	* inline.c (search_set_keys): Dont check syntax error.
	* parser.y (search_statement): Check syntax error here.
	(resolve_predefined_name): Return filler on error.

2002-06-06  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (codegen): Always generate program function,
	putting main() at the end.

2002-06-06  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (process_command_line, print_usage): Activate -g.

2002-06-05  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (print_usage): Don't show -g.
