@@ -1,3 +1,9 @@
+2002-06-17  Keisuke Nishida  <knishida@netlab.jp>
+
+	* inline.c, inline.h (output_call_statement): Take st1 and st2.
+	* parser.y (call_mode): Renamed from `current_call_mode'.
+	(call_statement): Updated and clean up.
+
 2002-06-11  Keisuke Nishida  <knishida@netlab.jp>
 
 	* cobc.c (process_module): Use COB_MODULE_EXT.
